Crash with signal SIGSYS, Bad system call `tgkill`
I have a tracker-extract-3 crash. The journal has
oct 10 22:57:57 thinkpad tracker-extract-3[125090]: Disallowed syscall "tgkill" caught in sandbox
oct 10 23:51:33 thinkpad tracker-extract-3[139506]: Disallowed syscall "tgkill" caught in sandbox
while the traceback is
Program terminated with signal SIGSYS, Bad system call.
#0 0x00007f35de7a79a9 in .annobin___GI___libc_sigaction.start ()
from /var/home/deathwish/.cache/debuginfod_client/75fb4e8e3b20efcec877a571581917c4494a427e/executable
[Current thread is 1 (Thread 0x7f35ddca0600 (LWP 139506))]
(gdb) bt
#0 0x00007f35de7a79a9 in .annobin___GI___libc_sigaction.start ()
from /var/home/deathwish/.cache/debuginfod_client/75fb4e8e3b20efcec877a571581917c4494a427e/executable
#1 0x0000000000000007 in ?? ()
#2 0x0000000000000000 in ?? ()