libtracker-miners-common: Allow tgkill on self's process

This is the syscall underneath abort(), assert(), etc. Let this
syscall through for the purpose of killing self's process, and
don't hide the actual errors.

Closes: https://gitlab.gnome.org/GNOME/tracker-miners/-/issues/287